# WfProfile

./: .gitignore  CMakeLists.txt  README.md
data/Log/: Log.txt
data/Settings/: Settings.cfg
data/Warframe/: Enemies.json  XpValues.json
src/EELogParser/: logParser.cpp  logParser.h
src/FileAccess/: FileAccess.cpp  FileAccess.h
src/apiParser/: apiParser.cpp  apiParser.h
src/autostart/: autoStartLinux.cpp  autoStartWindows.cpp  autostart.h
src/background/: BackgroundWorker.cpp  BackgroundWorker.h
src/dataReader/: dataReader.cpp  dataReader.h
src/window/: CaptureOverlay.cpp  CaptureOverlay.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overviewPartWidget.cpp  overviewPartWidget.h
